# fobbage

./: .env.development  .env.production  .eslintrc.js  .gitignore  DEPLOYMENT.MD  Pipfile  Procfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/workflows/: django-no-container.yml  django.yml
fobbage/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
fobbage/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
fobbage/accounts/api/: serializers.py  urls.py  views.py
fobbage/accounts/migrations/: 0001_initial.py  0002_auto_20190325_1211.py  0003_auto_20190325_1223.py  0004_auto_20190325_1228.py  0005_auto_20190325_1246.py  0006_auto_20190325_1247.py
fobbage/management/commands/: export.json  load_initial_data.py
fobbage/quizes/: admin.py  consumers.py  forms.py  messages.py  models.py  old_views.py  questions.json  router.py  routing.py  serializers.py  services.py  urls.py  views.py
fobbage/settings/: __init__.py
fobbage/static/: index.html
fobbage/templates/: base.html  base_login.html  base_username.html
public/: index.html
scripts/: bootstrap  console  manage  server  setup  test  test_vs_app  update
src/: App.vue  main.js  router.js
src/components/: HelloWorld.vue  NavigationBar.vue
src/plugins/: vuetify.js
src/services/: resource.js
src/store/: index.js  mutation-types.js
src/utils/: axiosClient.js
src/views/: Chat.vue  Home.vue  Login.vue  Logout.vue  Play.vue  Quizlist.vue  Register.vue
tests/factories/: account_factories.py  quiz_factories.py
(+151 files in other folders)
